Fixed overflow issue in dashboard

--- a/oll-frontend-support/src/app/screens/dashboard/dashboard.component.scss
+++ b/oll-frontend-support/src/app/screens/dashboard/dashboard.component.scss
@@ -78,7 +78,7 @@ select:focus-visible {
 }
 
 .custom-scrollbar-queue {
-  max-height: 24.5rem;
+  max-height: 21rem;
 }
 
 .custom-min-height {
